# rclimbcap

./: .gitignore  README.md
ClimCapApi/: CMakeLists.txt  requirements.txt  start.bat  terminal.qrc
ClimCapApi/data/: config.json  save.json
ClimCapApi/data/calibration_matrices/: G_202109A1-10_o2.txt  G_202109A1-11_o2.txt  G_202109A1-1_o1.txt  G_202109A1-2_o1.txt  G_202109A1-2_o2.txt  G_202109A1-3_o2.txt  G_202109A1-4_o1.txt  G_202109A1-4_o2.txt  G_202109A1-5_o1.txt  G_202109A1-5_o2.txt  G_202109A1-6_o1.txt  G_202109A1-6_o2.txt  G_202109A1-7_o2.txt  G_202109A1-8_o1.txt  G_202109A1-8_o2.txt  G_202109A1-9_o2.txt  G_PF1_202109A1.txt  G_PF1_PF2_202109A1.txt  G_PF2_202109A1.txt  dummy2.txt
ClimCapApi/exec/: ClimbCap-data.lnk  ClimbCap-visu.lnk  start___.bat
ClimCapApi/forms/: mainwindow.ui  settingswidget.ui  terminal.qrc
ClimCapApi/include/: AppController.h  connectionstatemachine.h  console.h  dataPacket.h  dataProcessing.h  dummySender.h  globals.h  mainwindow.h  myudp.h  nidaqmxconnectionthread.h  sensor.h  settingswidget.h
ClimCapApi/python_ui/: ForceDataContainer.c  ForceDataContainer.cp312-win_amd64.pyd  ForceDataContainer.pyx  MediaController.py  PowerBarWidget.py  TimeDialog.py  analogdata.py  colors.py  contact.py  contactTableWidget.py  dataEmulator.py  datacore.py  datacore_ar.py  graph_ui.py  import pandas as pd.py  import sys.py  opencvworker.py  osc_sender.py  plotterWidget.py  qtimelinewidget.py  recv_osc.py  routeViewWidget.py  setup.py  setupapp.py  svgtest.py  testUI.py  testUI.pyw  testcython.py  testscrollgraph.py  timelinetest.py  tools.py  videoPlayerWidget.py
ClimCapApi/src/: connectionstatemachine.cpp  console.cpp  dataProcessing.cpp  main.cpp  mainwindow.cpp  myudp.cpp  nidaqmxconnectionthread.cpp  sensor.cpp  settingsdialog.cpp  settingswidget.cpp
